--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -12,7 +12,7 @@
     <header class="topo">
         <nav>
         <div class="logo">
-            <a class="logoEstilo" href="index.html"><img  src="casa.png" alt="casa">WELLDOME</a>
+            <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
             <ul class="menu">
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
@@ -22,45 +22,16 @@
         </nav>
     </header>
     <main class="conteúdo">
-        <section>
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugiat quae, ullam veniam magni eius quos eum rerum, corrupti reprehenderit sit ipsum sapiente est optio ducimus earum repellat placeat incidunt?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia possimus beatae debitis tempore repellat enim molestiae iusto at, ipsum sunt sit aliquam quis! Assumenda, facere commodi. Debitis fuga temporibus esse!
-                </p>
+        <section class="container-1">
+            <div class="content-1">
+                <img src="./img/Manhã.png" alt="">
+                <img src="./img/Tarde.png" alt="">
+                <img src="./img/Noite.png" alt="">
+
             </div>
+        </section>
+        <section class="container-2">
+
         </section>
     </main>
     <footer>
@@ -74,7 +45,7 @@
                     
             </div>
             <div class="div info2">
-                <img src="headphone.jpg" alt="headphone">
+                <img src="./img/headphone.jpg" alt="headphone">
                 <a target="_blank" href='https://br.freepik.com/vetores/musica'>Música vetor criado por macrovector - br.freepik.com</a>
             </div>
     </footer>
