--- a/Site-2/sobre.html
+++ b/Site-2/sobre.html
@@ -12,7 +12,7 @@
     <header class="topo">
         <nav>
         <div class="logo">
-            <a class="logoEstilo" href="index.html"><img  src="casa.png" alt="casa">WELLDOME</a>
+            <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
             <ul class="menu">
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
@@ -35,7 +35,7 @@
                     
             </div>
             <div class="div info2">
-                <img src="headphone.jpg" alt="headphone">
+                <img src="./img/headphone.jpg" alt="headphone">
                 <a target="_blank" href='https://br.freepik.com/vetores/musica'>Música vetor criado por macrovector - br.freepik.com</a>
             </div>
     </footer>
