--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="login-estilo.css">
+    <link rel="stylesheet" href="Home-estilo.css">
 </head>
 <body>
     <header class="topo">
@@ -24,15 +24,16 @@
     <main class="conteúdo">
         <section class="container-1">
             <div class="content-1">
-                <img src="./img/Manhã.png" alt="">
-                <img src="./img/Tarde.png" alt="">
-                <img src="./img/Noite.png" alt="">
+                <img class="manha" src="./img/Manhã.png" alt="Manhã">
+                <img class="tarde" src="./img/Tarde.png" alt="Tarde">
+                <img class="noite" src="./img/Noite.png" alt="Noite">
 
             </div>
         </section>
         <section class="container-2">
 
         </section>
+        
     </main>
     <footer>
             <div class="div info1">
