--- a/Site-2/cadastro.html
+++ b/Site-2/cadastro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="login-estilo.css">
+    <link rel="stylesheet" href="Cadastro-estilo.css">
 </head>
 <body>
     <header class="topo">
@@ -15,13 +15,27 @@
             <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
             <ul class="menu">
-                <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
-                <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m cadastro" href="cadastro.html">CADASTRO</a></li>
+                <li><a class="m login" href="login.html">LOGIN</a></li>
+                <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
         </nav>
     </header>
     <main class="conteúdo">
+        <section class="container-1">
+            <div class="content-1">
+                <div class="manha">
+                    <img  src="./img/Manhã.png" alt="Manhã">
+                    <div>
+                        <h3>O que é o Welldome?</h3>
+                        <p>
+                            Welldome é uma plataforma... Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit blanditiis, non nihil nisi quas magni earum sapiente, odit illum molestiae impedit atque itaque beatae consectetur maiores consequuntur iure iste eveniet.
+                        </p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
             <div class="div info1">
