--- a/Site-2/sobre.html
+++ b/Site-2/sobre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="login-estilo.css">
+    <link rel="stylesheet" href="Sobre-estilo.css">
 </head>
 <body>
     <header class="topo">
@@ -15,14 +15,19 @@
             <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
             <ul class="menu">
-                <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
-                <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m cadastro" href="cadastro.html">CADASTRO</a></li>
+                <li><a class="m login" href="login.html">LOGIN</a></li>
+                <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
         </nav>
     </header>
     <main class="conteúdo">
-        
+        <section class="container-1">
+            <div class="content-1">
+                O projeto <strong>WELLDOME</strong>  é um projeto feito por Francisco Linhares da Silva Neto
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quaerat fuga vero culpa? In animi magnam impedit officia facilis tempore culpa excepturi illo incidunt amet saepe, nihil laborum suscipit eaque.
+            </div>
+        </section>
     </main>
     <footer>
             <div class="div info1">
