--- a/Site-2/cadastro.html
+++ b/Site-2/cadastro.html
@@ -24,15 +24,11 @@
     <main class="conteúdo">
         <section class="container-1">
             <div class="content-1">
-                <div class="manha">
-                    <img  src="./img/Manhã.png" alt="Manhã">
-                    <div>
-                        <h3>O que é o Welldome?</h3>
-                        <p>
-                            Welldome é uma plataforma... Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit blanditiis, non nihil nisi quas magni earum sapiente, odit illum molestiae impedit atque itaque beatae consectetur maiores consequuntur iure iste eveniet.
-                        </p>
-                    </div>
-                    
+                <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum maxime odit nesciunt cum tempora. Eaque odit voluptate rem, repellendus odio nulla consectetur laborum fugit fugiat minima, possimus veniam maiores. Hic!</div>
+            </div>
+            <div class="content-2">
+                <div>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium adipisci minus modi nemo incidunt eum, iure repellendus ducimus fugiat perferendis, enim mollitia dolorem, qui porro assumenda sed hic eos sunt!
                 </div>
             </div>
         </section>
