--- a/Site-2/cadastro-2.html
+++ b/Site-2/cadastro-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="Cadastro-estilo.css">
 </head>
@@ -27,17 +27,19 @@
                     <h3>Cadastro 1</h3>
                     <form class="form-cadastro" action="">
                         <h4>Nome completo:</h4>
-                        <input type="text" name="nome completo" id="full-name">
+                        <input type="text" name="nome completo" id="full-name-reader">
                         <h4>Nome de usuário:</h4>
-                        <input type="text" name="nome" id="username">
+                        <input type="text" name="nome" id="username-reader">
                         <h4>Email:</h4> 
-                        <input type="email" name="email" id="email-user">
+                        <input type="email" name="email" id="email-reader">
                         <h4>Senha:</h4>
-                        <input type="password" name="senha" id="password-user">
-                        <input type="submit" id="sign-up-user" value="Cadastrar">
+                        <input type="password" name="senha" id="password-reader">
+                        Anexo de audio:
+                        <input type="file" name="audio" id="audio">
+                        <input type="submit" id="sign-up-reader" value="Cadastrar">
                     </form>
                     <div>
-                        <a href="cadastro-2.html">Cadastrar-se como leitor</a>
+                        <a href="">Cadastrar-se como leitor</a>
                     </div>
             </div>
         </section>
