--- a/Site-2/cadastro-2.html
+++ b/Site-2/cadastro-2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="Cadastro-estilo.css">
+    <link rel="stylesheet" href="Cadastro-2-estilo.css">
 </head>
 <body>
     <header class="topo">
@@ -34,13 +34,11 @@
                         <input type="email" name="email" id="email-reader">
                         <h4>Senha:</h4>
                         <input type="password" name="senha" id="password-reader">
-                        Anexo de audio:
-                        <input type="file" name="audio" id="audio">
+                        <h4>Anexo de áudio:</h4>
+                        <input type="file" name="audio" accept="audio/*" id="audio-reader">
                         <input type="submit" id="sign-up-reader" value="Cadastrar">
                     </form>
-                    <div>
-                        <a href="">Cadastrar-se como leitor</a>
-                    </div>
+                    
             </div>
         </section>
     </main>
