--- a/Site-2/login.html
+++ b/Site-2/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="login-estilo.css">
+    <link rel="stylesheet" href="Login-estilo.css">
 </head>
 <body>
     <header class="topo">
@@ -22,7 +22,23 @@
         </nav>
     </header>
     <main class="conteúdo">
-        
+        <section class="container-1">
+            <div class="content-1">
+                    <h3>Login</h3>
+                    <form class="form-login" action="">
+                        <h4>Email:</h4> 
+                        <input type="email" name="email" id="email-user">
+                        <h4>Senha:</h4>
+                        <input type="password" name="senha" id="password-user">
+                        <input type="submit" id="log-in-user" value="Entrar">
+                    </form>
+                    <div>
+                        <a class="login-info" href="">Esqueceu a senha?</a>
+                        <a class="login-info" href="cadastro.html">Cadastrar-se</a>
+                        <a class="login-info" href="cadastro-2.html">Cadastrar-se como leitor</a>
+                    </div>
+            </div>
+        </section>
     </main>
     <footer>
             <div class="div info1">
