--- a/Site-2/cadastro-2.html
+++ b/Site-2/cadastro-2.html
@@ -14,17 +14,23 @@
         <div class="logo">
             <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
+        <ul class="redesSociais">
+            <li><a class="rs" href=""><img src="./img/facebook.png" alt=""></a></li>
+            <li><a class="rs" href=""><img src="./img/003-twitter.png" alt=""></a></li>
+            <li><a class="rs" href=""><img src="./img/005-instagram.png" alt=""></a></li>
+        </ul>
             <ul class="menu">
                 <li><a class="m cadastro" href="cadastro.html">CADASTRO</a></li>
                 <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
+            
         </nav>
     </header>
     <main class="conteúdo">
         <section class="container-1">
             <div class="content-1">
-                    <h3>Cadastro 1</h3>
+                    <h3>Cadastro 2</h3>
                     <form class="form-cadastro" action="">
                         <h4>Nome completo:</h4>
                         <input type="text" name="nome completo" id="full-name-reader">
