--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -14,11 +14,17 @@
         <div class="logo">
             <a class="logoEstilo" href="index.html"><img  src="./img/casa.png" alt="casa">WELLDOME</a>
         </div>
+        <ul class="redesSociais">
+            <li><a class="rs" href=""><img src="./img/facebook.png" alt=""></a></li>
+            <li><a class="rs" href=""><img src="./img/003-twitter.png" alt=""></a></li>
+            <li><a class="rs" href=""><img src="./img/005-instagram.png" alt=""></a></li>
+        </ul>
             <ul class="menu">
                 <li><a class="m cadastro" href="cadastro.html">CADASTRO</a></li>
                 <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
+            
         </nav>
     </header>
     <main class="conteúdo">
@@ -71,6 +77,7 @@
                     <li class="MB"><a href="http://google.com">CONTATOS</a></li>
                     <li class="MB"><a href="">TERMOS DE USO</a></li>
                     <li class="MB"><a href="">PRIVACIDADE</a></li>
+                    <li class="MB"><a href="referencias.html">REFERÊNCIAS</a></li>
                 </ul>
                     
             </div>
