--- a/Site-2/login.html
+++ b/Site-2/login.html
@@ -47,20 +47,21 @@
         </section>
     </main>
     <footer>
-            <div class="div info1">
-                <ul class="menu baixo">
-                    <li class="MB"><a target="_blank" href="https://www.linkedin.com/in/francisco-linhares-76344b210/">CRIADOR</a></li>
-                    <li class="MB"><a href="http://google.com">CONTATOS</a></li>
-                    <li class="MB"><a href="">TERMOS DE USO</a></li>
-                    <li class="MB"><a href="">PRIVACIDADE</a></li>
-                </ul>
-                    
-            </div>
-            <div class="div info2">
-                <img src="./img/headphone.jpg" alt="headphone">
-                <a target="_blank" href='https://br.freepik.com/vetores/musica'>Música vetor criado por macrovector - br.freepik.com</a>
-            </div>
-    </footer>
+        <div class="div info1">
+            <ul class="men baixo">
+                <li class="MB"><a target="_blank" href="https://www.linkedin.com/in/francisco-linhares-76344b210/">CRIADOR</a></li>
+                <li class="MB"><a href="http://google.com">CONTATOS</a></li>
+                <li class="MB"><a href="">TERMOS DE USO</a></li>
+                <li class="MB"><a href="">PRIVACIDADE</a></li>
+                <li class="MB"><a href="referencias.html">REFERÊNCIAS</a></li>
+            </ul>
+                
+        </div>
+        <div class="div info2">
+            <img src="./img/headphone.jpg" alt="headphone">
+            <a target="_blank" href='https://br.freepik.com/vetores/musica'>Música vetor criado por macrovector - br.freepik.com</a>
+        </div>
+</footer>
 </body>
 <script src="script.js"></script>
 </html>
