--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -24,7 +24,7 @@
                 <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
-            
+            <button class="btn_menu"></button>
         </nav>
     </header>
     <main class="conteúdo">
