--- a/Site-2/index.html
+++ b/Site-2/index.html
@@ -24,7 +24,11 @@
                 <li><a class="m login" href="login.html">LOGIN</a></li>
                 <li><a class="m sobre" href="sobre.html">SOBRE</a></li>
             </ul>
-            <button class="btn_menu"></button>
+            <div class="menu_responsivo">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
     </header>
     <main class="conteúdo">
