--- a/Site-4/index.html
+++ b/Site-4/index.html
@@ -16,10 +16,10 @@
             </div>
 
             <div class="menu-nav">
-                <ul class="d-i-b">
-                    <li class="list-menu"><a class="link menu-top sobre" href="">SOBRE</a></li>
-                    <li class="list-menu"><a class="link menu-top login" href="">LOGIN</a></li>
-                    <li class="list-menu"><a class="link menu-top cadastro" href="">CADASTRO</a></li>
+                <ul class="list-menu">
+                    <li class="d-i-b"><a class="link menu-top sobre" href="">SOBRE</a></li>
+                    <li class="d-i-b"><a class="link menu-top login" href="">LOGIN</a></li>
+                    <li class="d-i-b"><a class="link menu-top cadastro" href="">CADASTRO</a></li>
                 </ul>
                 <div class="">
                     <a class="link d-i-b redes-sociais-pos" href=""><img class="redes-sociais" src="./img/facebook.png" alt=""></a>
@@ -32,19 +32,19 @@
     <main>
 
     </main>
-    <footer>
+    <footer class="footer">
         <div>
-            <ul>
-                <li><a class="link" target="_blank" href="https://www.linkedin.com/in/francisco-linhares-76344b210/">CRIADOR</a></li>
-                <li><a class="link" href="http://google.com">CONTATOS</a></li>
-                <li><a class="link" href="">TERMOS DE USO</a></li>
-                <li><a class="link" href="">PRIVACIDADE</a></li>
-                <li><a class="link" href="referencias.html">REFERÊNCIAS</a></li>
+            <ul class="list-menu ">
+                <li><a class="link font-footer" target="_blank" href="https://www.linkedin.com/in/francisco-linhares-76344b210/">CRIADOR</a></li>
+                <li><a class="link font-footer" href="http://google.com">CONTATOS</a></li>
+                <li><a class="link font-footer" href="">TERMOS DE USO</a></li>
+                <li><a class="link font-footer" href="">PRIVACIDADE</a></li>
+                <li><a class="link font-footer" href="referencias.html">REFERÊNCIAS</a></li>
             </ul>
                 
         </div>
         <div>
-            <img src="" alt="headphone">
+            <a class="link logo" href=""><img src="./img/casa.png" alt="">WISE AUDIO</a>
         </div>
 </footer>
 </body>
