--- a/Site-4/index.html
+++ b/Site-4/index.html
@@ -15,12 +15,19 @@
                 <a href=""><img src="./img/casa.png" alt=""></a>
             </div>
 
-            <div class="menu-hamb">
+            <div class="menu-hamb on">
                 <div class="menu-toggle">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
                 </div>
+                <nav class="menu-mobile">
+                    <ul class="header-menu">
+                        <li ><a class="sobre" href="">SOBRE</a></li>
+                        <li ><a class="login"  href="">LOGIN</a></li>
+                        <li ><a class="cadastro" href="">CADASTRO</a></li>
+                    </ul>
+                </nav>
             </div>
             
             <div class="menu-top" >
