--- a/Site-4/index.html
+++ b/Site-4/index.html
@@ -15,8 +15,8 @@
                 <a href=""><img src="./img/casa.png" alt=""></a>
             </div>
 
-            <div class="menu-hamb on">
-                <div class="menu-toggle">
+            <div class="menu-hamb" >
+                <div class="menu-toggle" onclick="openMenu()">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
