--- a/Site-4/login.html
+++ b/Site-4/login.html
@@ -45,24 +45,24 @@
         </nav>
     </header>
 
-    <section class="carousel">
-        <div class="content">
-            <img src="./img/Manhã.png" alt="manhã">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptate quae rem consequuntur quia non porro dolore assumenda blanditiis eum harum voluptatum aliquam, cupiditate accusamus quaerat earum quisquam fuga tenetur.
-                Lorem ipsum
+    <main class="conteúdo">
+        <section class="container-1">
+            <div class="content-1">
+                    <h3>Login</h3>
+                    <form class="form-login" action="">
+                        <h4>Email:</h4> 
+                        <input type="email" name="email" id="email-user">
+                        <h4>Senha:</h4>
+                        <input type="password" name="senha" id="password-user">
+                        <input type="submit" id="log-in-user" value="Entrar">
+                    </form>
+                    <div>
+                        <a class="login-info" href="">Esqueceu a senha?</a>
+                        <a class="login-info" href="cadastro.html">Cadastrar-se</a>
+                        <a class="login-info" href="cadastro-2.html">Cadastrar-se como leitor</a>
+                    </div>
             </div>
-        </div>
-    </section>
-
-    <main class="main">
-        <div class="content">
-            <img src="./img/Noite.png" alt="">
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex enim dignissimos incidunt illum ea sequi pariatur voluptate inventore, aliquam culpa soluta odio repudiandae atque doloribus temporibus maxime fugiat quas recusandae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sint architecto sit, nostrum porro possimus, voluptatibus rem iste, dicta beatae optio inventore. Suscipit deleniti exercitationem quod voluptatibus! Perspiciatis, fugiat distinctio.
-            </div>
-            
-        </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
