--- a/Site-4/sobre.html
+++ b/Site-4/sobre.html
@@ -45,24 +45,13 @@
         </nav>
     </header>
 
-    <section class="carousel">
-        <div class="content">
-            <img src="./img/Manhã.png" alt="manhã">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptate quae rem consequuntur quia non porro dolore assumenda blanditiis eum harum voluptatum aliquam, cupiditate accusamus quaerat earum quisquam fuga tenetur.
-                Lorem ipsum
+    <main class="conteúdo">
+        <section class="container-1">
+            <div class="content-1">
+                O projeto <strong>WELLDOME</strong>  é um projeto feito por Francisco Linhares da Silva Neto
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quaerat fuga vero culpa? In animi magnam impedit officia facilis tempore culpa excepturi illo incidunt amet saepe, nihil laborum suscipit eaque.
             </div>
-        </div>
-    </section>
-
-    <main class="main">
-        <div class="content">
-            <img src="./img/Noite.png" alt="">
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex enim dignissimos incidunt illum ea sequi pariatur voluptate inventore, aliquam culpa soluta odio repudiandae atque doloribus temporibus maxime fugiat quas recusandae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sint architecto sit, nostrum porro possimus, voluptatibus rem iste, dicta beatae optio inventore. Suscipit deleniti exercitationem quod voluptatibus! Perspiciatis, fugiat distinctio.
-            </div>
-            
-        </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
