--- a/Site-4/sobre.html
+++ b/Site-4/sobre.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/Sobre-estilo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -66,7 +67,7 @@
                     
             </div>
             <div class="logo">
-                <a  href=""><img src="./img/casa.png" alt=""></a>
+                <a  href="index.html"><img src="./img/casa.png" alt=""></a>
             </div>
         </div>
         
