--- a/Site-4/cadastro2.html
+++ b/Site-4/cadastro2.html
@@ -46,9 +46,8 @@
         </nav>
     </header>
 
-    <main class="conteúdo">
-        <section class="container-1">
-            <div class="content-1">
+    <main class="main">
+            <div class="content">
                     <h3>Cadastro 2</h3>
                     <form class="form-cadastro" action="">
                         <h4>Nome completo:</h4>
@@ -65,7 +64,6 @@
                     </form>
                     
             </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="container">
