--- a/Site-4/index.html
+++ b/Site-4/index.html
@@ -28,6 +28,11 @@
                         <li ><a class="login"  href="login.html">LOGIN</a></li>
                         <li ><a class="cadastro" href="cadastro.html">CADASTRO</a></li>
                     </ul>
+                    <div >
+                        <a  href=""><img class="redes-sociais" src="./img/facebook.png" alt=""></a>
+                        <a  href=""><img class="redes-sociais" src="./img/005-instagram.png" alt=""></a>
+                        <a  href=""><img class="redes-sociais" src="./img/003-twitter.png" alt=""></a>
+                    </div>
                 </nav>
             </div>
             
