--- a/Site-4/login.html
+++ b/Site-4/login.html
@@ -46,24 +46,22 @@
         </nav>
     </header>
 
-    <main class="conteúdo">
-        <section class="container-1">
-            <div class="content-1">
+    <main class="main">
+            <div class="content">
                     <h3>Login</h3>
                     <form class="form-login" action="">
                         <h4>Email:</h4> 
                         <input type="email" name="email" id="email-user">
                         <h4>Senha:</h4>
                         <input type="password" name="senha" id="password-user">
-                        <input type="submit" id="log-in-user" value="Entrar">
+                        <input type="submit" id="login-user" value="Entrar">
                     </form>
-                    <div>
-                        <a class="login-info" href="">Esqueceu a senha?</a>
-                        <a class="login-info" href="cadastro.html">Cadastrar-se</a>
-                        <a class="login-info" href="cadastro-2.html">Cadastrar-se como leitor</a>
+                    <div class="outros">
+                        <a class="" href="">Esqueceu a senha?</a>
+                        <a class="" href="cadastro.html">Cadastrar-se</a>
+                        <a class="" href="cadastro-2.html">Cadastrar-se como leitor</a>
                     </div>
             </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="container">
