--- a/Site-4/cadastro.html
+++ b/Site-4/cadastro.html
@@ -46,9 +46,8 @@
         </nav>
     </header>
 
-    <main class="conteúdo">
-        <section class="container-1">
-            <div class="content-1">
+    <main class="main">
+            <div class="content">
                     <h3>Cadastro 1</h3>
                     <form class="form-cadastro" action="">
                         <h4>Nome completo:</h4>
@@ -66,7 +65,6 @@
                         <a href="cadastro2.html">Cadastrar-se como leitor</a>
                     </div>
             </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="container">
