--- a/Site-4/sobre.html
+++ b/Site-4/sobre.html
@@ -46,9 +46,9 @@
         </nav>
     </header>
 
-    <main class="conteúdo">
-        <section class="container-1">
-            <div class="content-1">
+    <main class="main">
+        <section class="content">
+            <div>
                 O projeto <strong>WELLDOME</strong>  é um projeto feito por Francisco Linhares da Silva Neto
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quaerat fuga vero culpa? In animi magnam impedit officia facilis tempore culpa excepturi illo incidunt amet saepe, nihil laborum suscipit eaque.
             </div>
